--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,5 +3,8 @@ $bg:red;
 body{
   background: $bg;
   // background-image: url('../assets/Museum-I-.png');
-
+display: flex;
+flex-wrap: wrap;
+box-shadow: inset;
+font-family: 'Courier New', Courier, monospace;
 }
